--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -29,18 +29,32 @@
 
     .main-content {
 
-      li {
-        margin: 0.5em 0;
+      ul,
+      ol {
+
+        li {
+          margin: 0.5em 0;
+        }
       }
 
       .language-plaintext {
         pre {
-          white-space: pre-wrap;
+          white-space: normal;
         }
       }
 
       code {
-        padding: 0.2em 0.3em;
+        padding: 0.2em 0.4em;
+      }
+
+      pre {
+        code {
+          padding: 0;
+        }
+      }
+
+      div.highlighter-rouge {
+        border: $border $grey-lt-100;
       }
     }
   }
@@ -113,6 +127,14 @@
 // Typography
 //
 
+.anchor-heading {
+
+  h1 &,
+  #table-of-contents & {
+    display: none !important;
+  }
+}
+
 h1, .text-alpha,
 h2, .text-beta,
 h3, .text-gamma,
@@ -138,9 +160,13 @@ h2:not(#table-of-contents) {
     content: "";
     display: block;
     height: 1px;
-    width: 3em;
+    width: 2em;
     margin: 0.8em 0 1em;
     background: $grey-lt-200;
+  }
+
+  .anchor-heading {
+    height: calc(100% - 0.8em);
   }
 }
 
@@ -190,8 +216,12 @@ h2:not(#table-of-contents) {
     padding: 1.25em;
   }
 
-  :not(a) {
+  * {
     color: inherit !important;
+  }
+
+  a {
+    text-decoration-color: currentColor !important;
   }
 
   > p:first-of-type {
@@ -204,5 +234,16 @@ h2:not(#table-of-contents) {
 
   > :last-child {
     margin-bottom: 0 !important;
+  }
+
+  h1, .text-alpha,
+  h2, .text-beta,
+  h3, .text-gamma,
+  h4, .text-delta,
+  h5, .text-epsilon,
+  h6, .text-zeta {
+    text-transform: none;
+    margin-bottom: 0.8em;
+    letter-spacing: normal;
   }
 }
